--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,12 @@
 # Object file
-*.o
+__pycache__/
+*.py[cod]
 
-# Ada Library Information
-*.ali
-# Created by https://www.toptal.com/developers/gitignore/api/osx
-# Edit at https://www.toptal.com/developers/gitignore?templates=osx
+.handler-saves
 
-### OSX ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# End of https://www.toptal.com/developers/gitignore/api/osx
+# Editor directories and files
+.idea
+*.suo
+*.sln
+*.sw?
+*.njsproj
